objects/JBCXM__GSLRMMapping__c.object
<CustomObject>
    <fields>
        <fullName>JBCXM__BookingType__c</fullName>
        <label>BookingType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBCXM__Config__c</fullName>
        <label>Config</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JBCXM__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GSLRMMapping</label>
    <listViews>
        <fullName>JBCXM__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GSLRMMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GSLRMMapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>